* Correctly apply negative-sawtooth for oncore 12 channel receiver.
* Startup code for original LinuxPPS removed.  LinuxPPS now conforms to
  the PPSAPI.
* [Bug 1000] allow implicit receive buffer allocation for Windows.
  fixes startup for windows systems with many interfaces.
  reduces dropped packets on network bursts.
  additionally fix timer() starvation during high load.
* [Bug 990] drop minimum time restriction for interface update interval.
* [Bug 977] Fix mismatching #ifdefs for builds without IPv6.
* Update the copyright year.
* Build system cleanup (make autogen-generated files writable).
* [Bug 957] Windows only: Let command line parameters from the Windows SCM GUI
  override the standard parameters from the ImagePath registry key.
* Fixes for ntpdate:
* [Bug 532] nptdate timeout is too long if several servers are supplied.
* [Bug 698] timeBeginPeriod is called without timeEndPeriod in some NTP tools.
* [Bug 857] ntpdate debug mode adjusts system clock when it shouldn't.
* [Bug 908] ntpdate crashes sometimes.
* [Bug 982] ntpdate(and ntptimeset) buffer overrun if HAVE_POLL_H isn't set
  (dup of 908).
* [Bug 997] ntpdate buffer too small and unsafe.
* ntpdate.c: Under Windows check whether NTP port in use under same conditions
  as under other OSs.
* ntpdate.c: Fixed some typos and indents (tabs/spaces).

---
(4.2.4p4) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 902] Fix problems with the -6 flag.
* Updated include/copyright.def (owner and year).
* [Bug 878] Avoid ntpdc use of refid value as unterminated string.
* [Bug 881] Corrected display of pll offset on 64bit systems.
* [Bug 886] Corrected sign handling on 64bit in ntpdc loopinfo command.
* [Bug 889] avoid malloc() interrupted by SIGIO risk
* ntpd/refclock_parse.c: cleanup shutdown while the file descriptor is still open.
* [Bug 885] use emalloc() to get a message at the end of the memory
            unsigned types cannot be less than 0
            default_ai_family is a short